fix: image opacity in dark mode

--- a/assets/scss/dark-mode.scss
+++ b/assets/scss/dark-mode.scss
@@ -315,6 +315,11 @@ html.night {
     }
   }
 
+  .viewer-canvas {
+    img {
+      opacity: 1;
+    }
+  }
   // waline
   /* 常规颜色 */
   --waline-white: #000;
